// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormFields should render Switch correctly 1`] = `
<SwitchField
  FieldProvider={[Function]}
  dataType="someDataType"
  id="someIdKey"
  input={
    Object {
      "name": "Name of the field",
      "value": "",
    }
  }
  meta={
    Object {
      "error": false,
      "touched": false,
    }
  }
>
  <FieldProvider
    dataType="someDataType"
    id="someIdKey"
    input={
      Object {
        "name": "Name of the field",
        "value": "",
      }
    }
    meta={
      Object {
        "error": false,
        "touched": false,
      }
    }
    render={[Function]}
  >
    <div>
      <FieldInterface
        componentType="switch-field"
        dataType="someDataType"
        id="someIdKey"
        input={
          Object {
            "name": "Name of the field",
            "value": "",
          }
        }
        meta={
          Object {
            "error": false,
            "touched": false,
          }
        }
        name="Name of the field"
      >
        <FormGroup
          bsClass="form-group"
          validationState={null}
        >
          <div
            className="form-group"
          >
            <Col
              bsClass="col"
              componentClass="div"
              md={12}
            >
              <div
                className="col-md-12"
              >
                <Switch
                  checked=""
                  id="someIdKey"
                  name="Name of the field"
                  offText="OFF"
                  onChange={[Function]}
                  onText="ON"
                  value=""
                >
                  <label
                    className="pf3-switch"
                  >
                    <input
                      checked=""
                      id="someIdKey"
                      name="Name of the field"
                      onChange={[Function]}
                      type="checkbox"
                      value=""
                    />
                    <span
                      className="pf3-switch-slider"
                    >
                      <span
                        className="on-text"
                      >
                        ON
                      </span>
                      <span
                        className="divider"
                      />
                      <span
                        className="off-text"
                      >
                        OFF
                      </span>
                    </span>
                  </label>
                </Switch>
              </div>
            </Col>
          </div>
        </FormGroup>
      </FieldInterface>
    </div>
  </FieldProvider>
</SwitchField>
`;

exports[`FormFields should render Switch with label correctly 1`] = `
<SwitchField
  FieldProvider={[Function]}
  dataType="someDataType"
  id="someIdKey"
  input={
    Object {
      "name": "Name of the field",
      "value": "",
    }
  }
  label="Label"
  meta={
    Object {
      "error": false,
      "touched": false,
    }
  }
>
  <FieldProvider
    dataType="someDataType"
    id="someIdKey"
    input={
      Object {
        "name": "Name of the field",
        "value": "",
      }
    }
    label="Label"
    meta={
      Object {
        "error": false,
        "touched": false,
      }
    }
    render={[Function]}
  >
    <div>
      <FieldInterface
        componentType="switch-field"
        dataType="someDataType"
        id="someIdKey"
        input={
          Object {
            "name": "Name of the field",
            "value": "",
          }
        }
        label="Label"
        meta={
          Object {
            "error": false,
            "touched": false,
          }
        }
        name="Name of the field"
      >
        <FormGroup
          bsClass="form-group"
          validationState={null}
        >
          <div
            className="form-group"
          >
            <Col
              bsClass="col"
              className="control-label"
              componentClass="label"
              md={2}
            >
              <label
                className="control-label col-md-2"
              >
                Label
              </label>
            </Col>
            <Col
              bsClass="col"
              componentClass="div"
              md={10}
            >
              <div
                className="col-md-10"
              >
                <Switch
                  checked=""
                  id="someIdKey"
                  name="Name of the field"
                  offText="OFF"
                  onChange={[Function]}
                  onText="ON"
                  value=""
                >
                  <label
                    className="pf3-switch"
                  >
                    <input
                      checked=""
                      id="someIdKey"
                      name="Name of the field"
                      onChange={[Function]}
                      type="checkbox"
                      value=""
                    />
                    <span
                      className="pf3-switch-slider"
                    >
                      <span
                        className="on-text"
                      >
                        ON
                      </span>
                      <span
                        className="divider"
                      />
                      <span
                        className="off-text"
                      >
                        OFF
                      </span>
                    </span>
                  </label>
                </Switch>
              </div>
            </Col>
          </div>
        </FormGroup>
      </FieldInterface>
    </div>
  </FieldProvider>
</SwitchField>
`;

exports[`FormFields should render Switch with labelText correctly 1`] = `
<SwitchField
  FieldProvider={[Function]}
  dataType="someDataType"
  id="someIdKey"
  input={
    Object {
      "name": "Name of the field",
      "value": "",
    }
  }
  labelText="labelText"
  meta={
    Object {
      "error": false,
      "touched": false,
    }
  }
>
  <FieldProvider
    dataType="someDataType"
    id="someIdKey"
    input={
      Object {
        "name": "Name of the field",
        "value": "",
      }
    }
    labelText="labelText"
    meta={
      Object {
        "error": false,
        "touched": false,
      }
    }
    render={[Function]}
  >
    <div>
      <FieldInterface
        componentType="switch-field"
        dataType="someDataType"
        id="someIdKey"
        input={
          Object {
            "name": "Name of the field",
            "value": "",
          }
        }
        labelText="labelText"
        meta={
          Object {
            "error": false,
            "touched": false,
          }
        }
        name="Name of the field"
      >
        <FormGroup
          bsClass="form-group"
          validationState={null}
        >
          <div
            className="form-group"
          >
            <Col
              bsClass="col"
              componentClass="div"
              md={12}
            >
              <div
                className="col-md-12"
              >
                <Switch
                  checked=""
                  id="someIdKey"
                  name="Name of the field"
                  offText="OFF"
                  onChange={[Function]}
                  onText="ON"
                  value=""
                >
                  <label
                    className="pf3-switch"
                  >
                    <input
                      checked=""
                      id="someIdKey"
                      name="Name of the field"
                      onChange={[Function]}
                      type="checkbox"
                      value=""
                    />
                    <span
                      className="pf3-switch-slider"
                    >
                      <span
                        className="on-text"
                      >
                        ON
                      </span>
                      <span
                        className="divider"
                      />
                      <span
                        className="off-text"
                      >
                        OFF
                      </span>
                    </span>
                  </label>
                </Switch>
              </div>
            </Col>
          </div>
        </FormGroup>
      </FieldInterface>
    </div>
  </FieldProvider>
</SwitchField>
`;

exports[`FormFields should render Switch with onText (custom prop) correctly 1`] = `
<SwitchField
  FieldProvider={[Function]}
  dataType="someDataType"
  id="someIdKey"
  input={
    Object {
      "name": "Name of the field",
      "value": "",
    }
  }
  meta={
    Object {
      "error": false,
      "touched": false,
    }
  }
  onText="OnText"
>
  <FieldProvider
    dataType="someDataType"
    id="someIdKey"
    input={
      Object {
        "name": "Name of the field",
        "value": "",
      }
    }
    meta={
      Object {
        "error": false,
        "touched": false,
      }
    }
    onText="OnText"
    render={[Function]}
  >
    <div>
      <FieldInterface
        componentType="switch-field"
        dataType="someDataType"
        id="someIdKey"
        input={
          Object {
            "name": "Name of the field",
            "value": "",
          }
        }
        meta={
          Object {
            "error": false,
            "touched": false,
          }
        }
        name="Name of the field"
        onText="OnText"
      >
        <FormGroup
          bsClass="form-group"
          validationState={null}
        >
          <div
            className="form-group"
          >
            <Col
              bsClass="col"
              componentClass="div"
              md={12}
            >
              <div
                className="col-md-12"
              >
                <Switch
                  checked=""
                  id="someIdKey"
                  name="Name of the field"
                  offText="OFF"
                  onChange={[Function]}
                  onText="OnText"
                  value=""
                >
                  <label
                    className="pf3-switch"
                  >
                    <input
                      checked=""
                      id="someIdKey"
                      name="Name of the field"
                      onChange={[Function]}
                      type="checkbox"
                      value=""
                    />
                    <span
                      className="pf3-switch-slider"
                    >
                      <span
                        className="on-text"
                      >
                        OnText
                      </span>
                      <span
                        className="divider"
                      />
                      <span
                        className="off-text"
                      >
                        OFF
                      </span>
                    </span>
                  </label>
                </Switch>
              </div>
            </Col>
          </div>
        </FormGroup>
      </FieldInterface>
    </div>
  </FieldProvider>
</SwitchField>
`;

exports[`FormFields should render Switch with placeholder correctly 1`] = `
<SwitchField
  FieldProvider={[Function]}
  dataType="someDataType"
  id="someIdKey"
  input={
    Object {
      "name": "Name of the field",
      "value": "",
    }
  }
  meta={
    Object {
      "error": false,
      "touched": false,
    }
  }
  placeholder="Placeholder"
>
  <FieldProvider
    dataType="someDataType"
    id="someIdKey"
    input={
      Object {
        "name": "Name of the field",
        "value": "",
      }
    }
    meta={
      Object {
        "error": false,
        "touched": false,
      }
    }
    placeholder="Placeholder"
    render={[Function]}
  >
    <div>
      <FieldInterface
        componentType="switch-field"
        dataType="someDataType"
        id="someIdKey"
        input={
          Object {
            "name": "Name of the field",
            "value": "",
          }
        }
        meta={
          Object {
            "error": false,
            "touched": false,
          }
        }
        name="Name of the field"
        placeholder="Placeholder"
      >
        <FormGroup
          bsClass="form-group"
          validationState={null}
        >
          <div
            className="form-group"
          >
            <Col
              bsClass="col"
              componentClass="div"
              md={12}
            >
              <div
                className="col-md-12"
              >
                <Switch
                  checked=""
                  id="someIdKey"
                  name="Name of the field"
                  offText="OFF"
                  onChange={[Function]}
                  onText="ON"
                  value=""
                >
                  <label
                    className="pf3-switch"
                  >
                    <input
                      checked=""
                      id="someIdKey"
                      name="Name of the field"
                      onChange={[Function]}
                      type="checkbox"
                      value=""
                    />
                    <span
                      className="pf3-switch-slider"
                    >
                      <span
                        className="on-text"
                      >
                        ON
                      </span>
                      <span
                        className="divider"
                      />
                      <span
                        className="off-text"
                      >
                        OFF
                      </span>
                    </span>
                  </label>
                </Switch>
              </div>
            </Col>
          </div>
        </FormGroup>
      </FieldInterface>
    </div>
  </FieldProvider>
</SwitchField>
`;

exports[`FormFields should render disabled Switch correctly 1`] = `
<SwitchField
  FieldProvider={[Function]}
  dataType="someDataType"
  id="someIdKey"
  input={
    Object {
      "name": "Name of the field",
      "value": "",
    }
  }
  isDisabled={true}
  meta={
    Object {
      "error": false,
      "touched": false,
    }
  }
>
  <FieldProvider
    dataType="someDataType"
    id="someIdKey"
    input={
      Object {
        "name": "Name of the field",
        "value": "",
      }
    }
    isDisabled={true}
    meta={
      Object {
        "error": false,
        "touched": false,
      }
    }
    render={[Function]}
  >
    <div>
      <FieldInterface
        componentType="switch-field"
        dataType="someDataType"
        id="someIdKey"
        input={
          Object {
            "name": "Name of the field",
            "value": "",
          }
        }
        isDisabled={true}
        meta={
          Object {
            "error": false,
            "touched": false,
          }
        }
        name="Name of the field"
      >
        <FormGroup
          bsClass="form-group"
          validationState={null}
        >
          <div
            className="form-group"
          >
            <Col
              bsClass="col"
              componentClass="div"
              md={12}
            >
              <div
                className="col-md-12"
              >
                <Switch
                  checked=""
                  disabled={true}
                  id="someIdKey"
                  name="Name of the field"
                  offText="OFF"
                  onChange={[Function]}
                  onText="ON"
                  value=""
                >
                  <label
                    className="pf3-switch disabled"
                  >
                    <input
                      checked=""
                      disabled={true}
                      id="someIdKey"
                      name="Name of the field"
                      onChange={[Function]}
                      type="checkbox"
                      value=""
                    />
                    <span
                      className="pf3-switch-slider"
                    >
                      <span
                        className="on-text"
                      >
                        ON
                      </span>
                      <span
                        className="divider"
                      />
                      <span
                        className="off-text"
                      >
                        OFF
                      </span>
                    </span>
                  </label>
                </Switch>
              </div>
            </Col>
          </div>
        </FormGroup>
      </FieldInterface>
    </div>
  </FieldProvider>
</SwitchField>
`;

exports[`FormFields should render readOnly Switch correctly 1`] = `
<SwitchField
  FieldProvider={[Function]}
  dataType="someDataType"
  id="someIdKey"
  input={
    Object {
      "name": "Name of the field",
      "value": "",
    }
  }
  isReadOnly={true}
  meta={
    Object {
      "error": false,
      "touched": false,
    }
  }
>
  <FieldProvider
    dataType="someDataType"
    id="someIdKey"
    input={
      Object {
        "name": "Name of the field",
        "value": "",
      }
    }
    isReadOnly={true}
    meta={
      Object {
        "error": false,
        "touched": false,
      }
    }
    render={[Function]}
  >
    <div>
      <FieldInterface
        componentType="switch-field"
        dataType="someDataType"
        id="someIdKey"
        input={
          Object {
            "name": "Name of the field",
            "value": "",
          }
        }
        isReadOnly={true}
        meta={
          Object {
            "error": false,
            "touched": false,
          }
        }
        name="Name of the field"
      >
        <FormGroup
          bsClass="form-group"
          validationState={null}
        >
          <div
            className="form-group"
          >
            <Col
              bsClass="col"
              componentClass="div"
              md={12}
            >
              <div
                className="col-md-12"
              >
                <Switch
                  checked=""
                  id="someIdKey"
                  isReadOnly={true}
                  name="Name of the field"
                  offText="OFF"
                  onChange={[Function]}
                  onText="ON"
                  value=""
                >
                  <label
                    className="pf3-switch disabled"
                  >
                    <input
                      checked=""
                      disabled={true}
                      id="someIdKey"
                      name="Name of the field"
                      onChange={[Function]}
                      type="checkbox"
                      value=""
                    />
                    <span
                      className="pf3-switch-slider"
                    >
                      <span
                        className="on-text"
                      >
                        ON
                      </span>
                      <span
                        className="divider"
                      />
                      <span
                        className="off-text"
                      >
                        OFF
                      </span>
                    </span>
                  </label>
                </Switch>
              </div>
            </Col>
          </div>
        </FormGroup>
      </FieldInterface>
    </div>
  </FieldProvider>
</SwitchField>
`;
